@@ -1,3 +1,7 @@
+2014-02-11  Christopher Faylor  <me.cygwin2014@cgf.cx>
+
+	* winsup.h: Turn off previous workaround but leave a comment.
+
 2014-02-11  Corinna Vinschen  <corinna@vinschen.de>
 
 	* ldap.cc (rediscover_thread): Give argument a useful name.
